force-app/main/default/objects/Collections_Territory__c/fields/BDM__c.field-meta.xml
<CustomField>
    <fullName>BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Business Development Manager.</description>
    <inlineHelpText>The Business Development Manager.</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Territory_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>