force-app/main/default/objects/Collections_Territory__c/fields/Biomed_Collection_Op_Center__c.field-meta.xml
<CustomField>
    <fullName>Biomed_Collection_Op_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biomed Collection Op (Center)</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipName>Collection_Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>