force-app/main/default/objects/Collections_Territory__c/fields/Biomed_Market_Manager_Territory__c.field-meta.xml
<CustomField>
    <fullName>Biomed_Market_Manager_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biomed Market Manager Territory</label>
    <referenceTo>Biomed_Market_Manager_Territory__c</referenceTo>
    <relationshipLabel>Collections Zip Codes</relationshipLabel>
    <relationshipName>Collections_Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>