force-app/main/default/objects/Collections_Territory__c/fields/Collection_Operation_ID__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation_ID__c</fullName>
    <formula>Collection_Operation__r.Collection_Operation_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Operation ID</label>
    <type>Text</type>
</CustomField>