force-app/main/default/objects/Collections_Territory__c/fields/District_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>District_Code_Formula__c</fullName>
    <formula>District__r.District_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District Code</label>
    <type>Text</type>
</CustomField>