force-app/main/default/objects/Collections_Territory__c/fields/Donor_Services_Division__c.field-meta.xml
<CustomField>
    <fullName>Donor_Services_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the division as of Oct 2019</description>
    <label>Donor Services Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Collections Zip Codes</relationshipLabel>
    <relationshipName>Collections_Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>