force-app/main/default/objects/Collections_Territory__c/fields/DRD_Territory2__c.field-meta.xml
<CustomField>
    <fullName>DRD_Territory2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DRD Territory</label>
    <referenceTo>DRD_Territory__c</referenceTo>
    <relationshipLabel>Collections Zip Codes</relationshipLabel>
    <relationshipName>Collections_Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>