force-app/main/default/objects/Collections_Territory__c/fields/DRD_Territory__c.field-meta.xml
<CustomField>
    <fullName>DRD_Territory__c</fullName>
    <label>DRD Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>