force-app/main/default/objects/Collections_Territory__c/fields/DRD_Territory_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>DRD_Territory_ID_Formula__c</fullName>
    <formula>DRD_Territory2__r.DRD_Territory_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRD Territory ID</label>
    <type>Text</type>
</CustomField>