force-app/main/default/objects/Collections_Territory__c/fields/External_Id_BackEnd__c.field-meta.xml
<CustomField>
    <fullName>External_Id_BackEnd__c</fullName>
    <label>External Id BackEnd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>