force-app/main/default/objects/Collections_Territory__c/fields/HS_Region__c.field-meta.xml
<CustomField>
    <fullName>HS_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS Region</label>
    <referenceTo>HS_Region__c</referenceTo>
    <relationshipLabel>Collections Zip Codes</relationshipLabel>
    <relationshipName>Collections_Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>