force-app/main/default/objects/Collections_Territory__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <label>NA Territory Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>