force-app/main/default/objects/Collections_Territory__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>The zip code.</description>
    <externalId>true</externalId>
    <inlineHelpText>The zip code.</inlineHelpText>
    <label>Zip</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>