force-app/main/default/objects/Collections_Territory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Zip__c</columns>
    <columns>sked_Start_Date__c</columns>
    <columns>sked_End_Date__c</columns>
    <columns>Collection_Operation__c</columns>
    <columns>DRD_Territory2__c</columns>
    <columns>District__c</columns>
    <columns>Region__c</columns>
    <columns>Service_Area__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Collection_Operation__c</field>
        <operation>notEqual</operation>
        <value>Non-Collection Area</value>
    </filters>
    <filters>
        <field>Collection_Operation__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>