force-app/main/default/objects/Collections_Territory__c/listViews/Non_Service_Areas.listView-meta.xml
<ListView>
    <fullName>Non_Service_Areas</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>District_Name__c</columns>
    <columns>Region__c</columns>
    <columns>Service_Area__c</columns>
    <columns>State_Code__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Zip__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Area__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Zip__c</field>
        <operation>contains</operation>
        <value>85935</value>
    </filters>
    <label>Non-Service Areas</label>
</ListView>