force-app/main/default/objects/Collections_Territory__c/listViews/UAT_Zips.listView-meta.xml
<ListView>
    <fullName>UAT_Zips</fullName>
    <columns>NAME</columns>
    <columns>Collection_Operation__c</columns>
    <columns>Collection_Operation_ID__c</columns>
    <columns>Biomed_Collection_Op_Code_Center_ID__c</columns>
    <columns>Zip__c</columns>
    <columns>sked_Start_Date__c</columns>
    <columns>sked_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zip__c</field>
        <operation>equals</operation>
        <value>01701</value>
    </filters>
    <label>UAT Zips</label>
</ListView>